Hopefully fixed canvas layout issue after the pic is snapped

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -22,13 +22,14 @@ button:hover
   border: 3px solid rgba(0,0,0,1);
   top: 100vh;
   left: 0%;
-  transition: transform 0.5s;
+  transition: transform 0.5s, top 0.4s;
   z-index: 5;
 }
 
 #canvas_container.snapped {
-  transform: translateY(-89.5%);
-  transition: transform 0.4s;
+  top: 0vh;
+  /* transform: translateY(-89.5%); */
+  transition: transform 0.4s, top 0.4s;
 }
 
 #button {
